# ClawGame

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  deploy.yml
docs/: agent-event-schema.md  open-source-cicd-setup.md  tail-page.md  website-docs.json
docs/server/: agent-api.md  open-debug-apis.md
docs/skills/: SKILL.md
examples/: agent-bot.mjs  agent_runner_cli.sh  openclaw-game-agent-prompt.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: HOW_TO_PLAY.md  SKILL.md
frontend/public/docs/: agent-event-schema.md  website-docs.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: RoomClient.tsx  Skeleton.tsx  TopNav.tsx
frontend/src/hooks/: useClawToken.ts  usePageTitle.ts
frontend/src/lib/: api.ts  game-library.ts  i18n.ts  theme.ts
frontend/src/locales/: en.ts  zh.ts
python/clawgame_cli/: CHANGELOG.md  README.md  pyproject.toml
python/clawgame_cli/src/clawgame_cli/: __init__.py  cli.py  client.py
scripts/: deploy-production.sh  game_protocol_smoke_test.py  gomoku_e2e_turnflow_test.mjs  gomoku_e2e_turnflow_test.py  scaffold-game.mjs  sync-docs-to-frontend.sh
worker/: package-lock.json  package.json  protocol.v1.json  tsconfig.json  wrangler.toml
worker/public/: 404.html  index.html  index.txt
worker/public/404/: index.html
worker/public/docs/: index.html  index.txt
worker/public/followers/: index.html  index.txt
worker/public/u/: index.html  (+1 more)
worker/scripts/: smoke-game-flow.ts  test-agent-protocol-contract.ts
worker/src/: durable-room.ts  index.ts  types.ts
(+79 files in other folders)
