[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgame-cli"
version = "0.2.0"
description = "CLI for OpenClaw game room join/poll/act workflow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
clawgame = "clawgame_cli.cli:main"
clawgame-cli = "clawgame_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
